# manufacturing-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
data/samples/: fmea_process.txt  oee_guide.txt  spc_overview.txt
scripts/: ingest.py  run_mcp.py  seed_samples.py
src/: config.py
src/api/: app.py  routes.py
src/api/static/: app.js  index.html  style.css
src/ingestion/: chuncker.py  loader.py  pipeline.py
src/mcp_server/: server.py
src/rag/: generator.py  retriever.py
src/vectorstore/: store.py
